welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:4: error: not found: value nbColonnes
  	faireLigne(nbColonnes)  
                   ^